monitoria/mac323/5-2-8/grades/Rodrigo-Alves-Souza_199695_assignsubmission_file_TrieST.java.txt

LOG DE COMPILAÇÃO E TESTE
Existem dois métodos de compilação, eles estão indicados, se um falha eu parto pro outro. Então se quiser entender o porque não compilou, verifique todos.
Segue também o log do corretor, pode ser interessante para descobrir a natureza de seus erros. A saída está trucada (não mostra todas as linha), se quiser ver todo o log, fale comigo

COMPILATION ERROR

EP: Rodrigo-Alves-Souza_199695_assignsubmission_file_TrieST.java
NOTA: 0
CORREÇÃO AUTOMÁTICA
0 Pontos (máximo: 4000)
0 Testes com Falha no corretor (avise o monitor)

make: '/home/bcc/victorsenam/private/usp/monitoria/mac323/5-2-8/tester/checker/checker' is up to date.
CorretorDoVictor.java:27: error: incompatible types: Integer cannot be converted to String
                    res = ex.floor(StdIn.readString());
                                  ^
CorretorDoVictor.java:33: error: incompatible types: Integer cannot be converted to String
                    res = ex.ceil(StdIn.readString());
                                 ^
CorretorDoVictor.java:39: error: incompatible types: Integer cannot be converted to String
                    res = ex.select(StdIn.readInt() + indexed);
                                   ^
3 errors
